Try to fix icon alignment for iphone

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body{
 .arrow-up-custom{
 	color: white;
 	font-size: 26px;
-	text-align: center;
 }
 
 .top-of-page-button{
@@ -20,6 +19,8 @@ body{
 	height: 48px;
 	box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
 	background-color: #2b2b2b;
+    justify-content: space-around;
+	align-items: center;
 }
 
 .top-of-page-button:hover{
